# fastapi-module-loader

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  justfile  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: flake8-mypy.yml  lint.yml  main.yml  test.yml  tox-pytest.yml
doc/: conf.py  index.rst
docker/: README.md
fastapi_module_loader/: __init__.py  base.py  exceptions.py  loader.py  module.py
fastapi_module_loader/tests/: test_module_loader.py
tests/: test_fastapi_integration.py  test_loader.py  test_module_loader.py
tests/test_example/: test_hello.py
