[tool.poetry]
name = "fastapi-modules"
version = "0.1.0"
description = "FastAPI modules loading for better structure in your ptojects (like Django AppConfig)"
authors = ["TEAM23 GmbH <info@team23.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
