[tool.poetry]
name = "fastapi-module-loader"
version = "0.1.0"
description = "FastAPI modules loading for better structure in your projects (like Django AppConfig)"
authors = ["TEAM23 GmbH <info@team23.de>"]
license = "MIT"
keywords = ["fastapi"]
readme = "README.md"
homepage = "https://github.com/team23/fastapi-module-loading"
repository = "https://github.com/team23/fastapi-module-loading"
#include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
pytest = "^7.1.2"
mypy = "^0.942"
isort = "^5.10.1"
pylint = "^2.13.7"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 115  # (2 + 3) * 23

[tool.pytest.ini_options]
minversion = "7.0"
filterwarnings = [
    "ignore:.*U.*mode is deprecated:DeprecationWarning",
]
norecursedirs = [
    ".git",
    "__pycache__",
]
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]
python_functions = [
    "test_*"
]

